# mlx-video-UI

./: .gitignore  README.md  app.py  lora_utils.py  pyproject.toml
backend/: main.py  requirements.txt
backend/models/: __init__.py  schemas.py
backend/prompts/: gemma_t2v_negative_system_prompt.txt  gemma_t2v_system_prompt.txt
backend/routes/: __init__.py  checkpoints.py  enhance.py  gallery.py  generate.py  loras.py  system.py  train.py  upload.py
backend/services/: __init__.py  gallery_service.py  prompt_enhancer.py  system_info.py  training_service.py  video_generator.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/gallery/: page.tsx
frontend/app/train/: page.tsx
frontend/components/: conditioning-panel.tsx  gallery-grid.tsx  lora-panel.tsx  model-selector.tsx  navigation.tsx  parameter-panel.tsx  progress-indicator.tsx  snowfall.tsx  training-form.tsx  video-generator.tsx  video-preview.tsx
frontend/lib/: api.ts
mlx-video/: README.md
mlx-video/mlx_video/: generate.py  generate_av.py  generate_dev.py  utils.py
ui/: __init__.py
ui/tabs/: __init__.py  advanced_settings.py  generation.py  movie_generator.py
