[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-video-ui"
version = "0.1.0"
description = "Gradio UI for MLX Video Generator"
requires-python = ">=3.11"
dependencies = [
    "mlx-video @ git+https://github.com/Blaizzy/mlx-video.git@pc/add-streaming",
    "gradio>=4.0.0",
    "requests",
]

[project.scripts]
mlx-video-ui = "app:main"
