[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-video-ui"
version = "0.1.0"
description = "Gradio UI for MLX Video Generator"
requires-python = ">=3.11"
dependencies = [
    "mlx-video @ file:///Users/charafchnioune/Desktop/Code/mlxpoort/mlxvideoui/mlx-video-UI/mlx-video",
    "gradio>=4.0.0",
    "requests",
]

[project.scripts]
mlx-video-ui = "app:main"

[tool.setuptools]
py-modules = ["app"]
packages = ["ui", "ui.tabs"]
